#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1322] Fix a few false-positive conditions in ssl-ccs-injection. TLS
  implementations that responded with fatal alerts other than "unexpected
  message" had been falsely marked as vulnerable. [Daniel Miller]

o Emergency fix to Nmap's birthday announcement so Nmap wishes itself
  a "Happy 21st Birthday" rather than "Happy 21th" in verbose mode
  (-v) on September 1, 2018. [Daniel Miller]

o [NSE] New knx.lua library holds common functions and definitions for
  communicating with KNX/Konnex devices. [Daniel Miller]

o [NSE] Completely removed the bit.lua NSE library. All of its functions are
  replaced by native Lua bitwise operations, except for `arshift` (arithmetic
  shift) which has been moved to the bits.lua library. [Daniel Miller]

o [GH#1291][GH#34] Use pcap_create instead of pcap_live_open in Nmap, and set
  immediate mode on the pcap descriptor. This solves packet loss problems on
  Linux and may improve performance on other platforms. [Daniel Cater, Mike
  Pontillo, Daniel Miller]

o [GH#1150] Start host timeout clocks when the first probe is sent to a host,
  not when the hostgroup is started. Sometimes a host doesn't get probes until
  late in the hostgroup, increasing the chance it will time out. [jsiembida]

o [GH#1147][GH#1108] Reduced LibPCRE resource limits so that version detection
  can't use as much of the stack. Previously Nmap could crash when run on
  low-memory systems against target services which are intentionally or
  accidentally difficult to match. Someone assigned CVE-2018-15173 for this
  issue. [Daniel Miller]

o [NSE] Support for edns-client-subnet (ECS) in dns.lua has been improved by:
  - [GH#1271] Using ECS code compliant with RFC 7871 [John Bond]
  - Properly trimming ECS address, as mandated by RFC 7871 [nnposter]
  - Fixing a bug that prevented using the same ECS option table more than
    once [nnposter]
